Update: some changes

--- a/database/active_record.html
+++ b/database/active_record.html
@@ -66,10 +66,10 @@ CodeIgniter 不需要每個資料表擁有他自己的類別檔案, 它取而代
 <p class="important"><strong>注意：</strong> 如果你想寫自己的查詢, 你可以在資料庫設定檔裡取消使用這個類別。這樣可以讓核心的資料庫程式庫以及界面耗用更少的資源。<br /></p>
 
 <ul>
-<li><a href="#select">挑選(Selecting)資料</a></li>
-<li><a href="#insert">新增(Inserting)資料</a></li>
-<li><a href="#update">更新(Updating)資料</a></li>
-<li><a href="#delete">刪除(Deleting)資料</a></li>
+<li><a href="#select">查詢資料 (Selecting)</a></li>
+<li><a href="#insert">新增資料 (Inserting)</a></li>
+<li><a href="#update">更新資料 (Updating)</a></li>
+<li><a href="#delete">刪除資料 (Deleting)</a></li>
 <li><a href="#chaining">方法串接</a></li>
 <li><a href="#caching">Active Record 快取</a></li>
 </ul>
