--- a/general/cli.html
+++ b/general/cli.html
@@ -29,7 +29,7 @@
 <table cellpadding="0" cellspacing="0" border="0" style="width:100%">
 <tr>
 <td><h1>CodeIgniter 使用手冊版本 2.0.2</h1></td>
-<td id="breadcrumb_right"><a href="../toc.html">Table of Contents Page</a></td>
+<td id="breadcrumb_right"><a href="../toc.html">目錄</a></td>
 </tr>
 </table>
 </div>
@@ -40,11 +40,11 @@
 <table cellpadding="0" cellspacing="0" border="0" style="width:100%">
 <tr>
 <td id="breadcrumb">
-<a href="http://www.codeigniter.org.tw/">CodeIgniter Home</a> &nbsp;&#8250;&nbsp;
+<a href="http://www.codeigniter.org.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
 透過 CLI 執行 CodeIgniter
 </td>
-<td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.org.tw/user_guide/" />Search User Guide&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
+<td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.org.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
 </table>
 <!-- END BREADCRUMB -->
@@ -58,40 +58,39 @@
 <h1>透過 CLI 執行 CodeIgniter</h1>
 
 <p>
-	As well as calling an applications <a href="./controllers.html">Controllers</a> via the URL in a browser they can also be loaded via the command-line interface (CLI).
+	就如同透過瀏覽器呼叫 applications <a href="./controllers.html">控制器 (Controllers)</a> 一樣，我們也可以透過 command-line interface (CLI) 呼叫程式。
 </p>
 
 
 <ul>
-<li><a href="#what">What is the CLI?</a></li>
-<li><a href="#why">Why use this method?</a></li>
-<li><a href="#how">How does it work?</a></li>
+<li><a href="#what">CLI 是什麼？</a></li>
+<li><a href="#why">為什麼使用此方法？</a></li>
+<li><a href="#how">它是如何運作呢？</a></li>
 </ul>
 
 
 <a name="what"></a>
-<h2>What is the CLI?</h2>
+<h2>CLI 是什麼？</h2>
 
-<p><dfn>The command-line interface is a text-based method of interacting with computers that looks like what most people remember as DOS.</dfn></p>
+<p><dfn>Command-line interface 是透過文字介面跟操作者溝通就如同許多使用者知道在 DOS 底下操作。</dfn></p>
 
 <a name="why"></a>
 
-<h2>Why run via the command-line?</h2>
+<h2>為什麼使用此方法？</h2>
 
-<p>
-	There are many reasons for running CodeIgniter from the command-line, but they are not always obvious.</p>
+<p>這裡有許多原因透過 command-line 去執行 CodeIgniter，但是它們總是被忽略。</p>
 
 <ul>
-	<li>Run your cron-jobs without needing to use wget or curl</li>
-	<li>Make your cron-jobs inaccessible from being loaded in the URL by checking for <kbd>IS_CLI</kbd></li>
-	<li>Make interactive "tasks" that can do things like set permissions, prune cache folders, run backups, etc.</li>
-	<li>Integrate with other applications in other languages. For example, a random C++ script could call one command and run code in your models!</li>
+	<li>透過 CLI 去執行您的 cron-jobs 而不需要使用 wget 或 curl</li>
+	<li>可以透過 <kbd>IS_CLI</kbd> 去判斷您的 cron-jobs，確保瀏覽器不能執行 cron-jobs 程式碼</li>
+	<li>互動式 "tasks" 工作，像是動態改變權限、清除 cache 目錄、執行備份…等。</li>
+	<li>可以利用其他語言整合其他相關應用，例如: 亂數 C++ 程式可以呼叫一個指令和在您的 Model 裡面執行程式!</li>
 </ul>
 
 <a name="how"></a>
-<h2>Let's try it:&nbsp; Hello World!</h2>
+<h2>讓我們來嘗試:&nbsp; Hello World!</h2>
 
-<p>Let's create a simple controller so you can see it in action. Using your text editor, create a file called <dfn>tools.php</dfn>, and put the following code in it:</p>
+<p>讓我們建立一支簡單的控制器來當作範例，利用您的編輯器新增檔案 <dfn>tools.php</dfn>, 並且將底下程式碼寫入到檔案裡面:</p>
 
 <textarea class="textarea" style="width:100%" cols="50" rows="10">
 &lt;?php
@@ -105,30 +104,30 @@ class Tools extends CI_Controller {
 ?&gt;
 </textarea>
 
-<p>Then save the file to your <dfn>application/controllers/</dfn> folder.</p>
+<p>之後將檔案儲存到 <dfn>application/controllers/</dfn> 目錄底下.</p>
 
-<p>Now normally you would visit the your site using a URL similar to this:</p>
+<p>現在您可以透過瀏覽器觀鍵入底下網址:</p>
 
 <code>example.com/index.php/<var>tools</var>/<var>message</var>/<var>to</var></code>
 
-<p>Instead, we are going to open Terminal in Mac/Lunix or go to Run > "cmd" in Windows and navigate to our CodeIgniter project.</p>
+<p>另外方式，我們可以透過 Mac/Linux 終端機或者是在 Windows 底下執行 "cmd" 去執行 CodeIgniter 專案</p>
 
 <blockquote>
 	$ cd /path/to/project;<br/>
 	$ php index.php tools message
 </blockquote>
 
-<p>If you did it right, you should see <samp>Hello World!</samp>.</p>
+<p>假設操作都正確，您會在螢幕上看到 <samp>Hello World!</samp>。</p>
 
 <blockquote>
 	$ php index.php tools message "John Smith"
 </blockquote>
 
-<p>Here we are passing it a argument in the same way that URL parameters work. "John Smith" is passed as a argument and output is: <samp>Hello John Smith!</samp>.</p>
+<p>這裡我們也可以用同樣方式傳入 URL 參數，例如傳入 "John Smith" 螢幕將會輸出: <samp>Hello John Smith!</samp>。</p>
 
-<h2>That's it!</h2>
+<h2>就是這樣!</h2>
 
-<p>That, in a nutshell, is all there is to know about controllers on the command line. Remember that this is just a normal controller, so routing and _remap works fine.</p>
+<p>簡單來說就是將控制器使用在 command line，請記住這只能使用在基本控制器上面，所以只有 routing 跟 _remap 可以正常執行。</p>
 
 
 
@@ -138,11 +137,11 @@ class Tools extends CI_Controller {
 
 <div id="footer">
 <p>
-Previous Topic:&nbsp;&nbsp;<a href="urls.html">CodeIgniter URLs</a>
+上個主題:&nbsp;&nbsp;<a href="urls.html">CodeIgniter 網址列 (URLs)</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-<a href="#top">Top of Page</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-<a href="../index.html">User Guide Home</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-Next Topic:&nbsp;&nbsp;<a href="reserved_names.html">Reserved Names</a></p>
+<a href="#top">回到頂端</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
+<a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
+下個主題:&nbsp;&nbsp;<a href="reserved_names.html">保留字</a></p>
 <p><a href="http://www.codeigniter.org.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006 - 2011 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">EllisLab, Inc.</a></p>
 </div>
 <script type="text/javascript">
