Update: translate general/errors.html completely

--- a/general/errors.html
+++ b/general/errors.html
@@ -79,7 +79,7 @@
 <p><dfn>application/errors/</dfn><kbd>error_404.php</kbd></p>
 
 <p>這個函數預期你傳給它的字串是所找不到的檔案路徑。注意，CodeIgniter會在找不到控制器(controller)時自動顯示404訊息。</p>
-<p>CodeIgniter automatically logs any show_404() calls. Setting the optional second parameter to FALSE will skip logging.</p>
+<p>呼叫使用 show_404() 函式，CodeIgniter 會自動幫忙寫入 log 檔案，可以設定第二個參數為 False 來略過紀錄。</p>
 
 
 <h2>log_message('<var>level</var>'，'<samp>message</samp>')</h2>
