--- a/installation/downloads.html
+++ b/installation/downloads.html
@@ -58,11 +58,12 @@
 <h1>下載 CodeIgniter</h1>
 
 <ul>
-    <li><a href="http://www.codeigniter.org.tw/download_files/CodeIgniter_2.0.2.zip">CodeIgniter V 2.0.2 (目前版本)</a></li>
-    <li><a href="http://www.codeigniter.org.tw/download_files/CodeIgniter_2.0.1.zip">CodeIgniter V 2.0.1</a></li>
-    <li><a href="http://www.codeigniter.org.tw/download_files/CodeIgniter_2.0.0.zip">CodeIgniter V 2.0.0</a></li>
-    <li><a href="http://www.codeigniter.org.tw/download_files/CodeIgniter_1.7.3.zip">CodeIgniter V 1.7.3</a></li>
-    <li><a href="http://www.codeigniter.org.tw/download_files/CodeIgniter_1.7.2.zip">CodeIgniter V 1.7.2</a></li>
+    <li><a href="http://www.codeigniter.org.tw/downloads/file/CodeIgniter_2.0.3">CodeIgniter V 2.0.3 (目前版本)</a></li>
+    <li><a href="http://www.codeigniter.org.tw/downloads/file/CodeIgniter_2.0.2">CodeIgniter V 2.0.2</a></li>
+    <li><a href="http://www.codeigniter.org.tw/downloads/file/CodeIgniter_2.0.1">CodeIgniter V 2.0.1</a></li>
+    <li><a href="http://www.codeigniter.org.tw/downloads/file/CodeIgniter_2.0.0">CodeIgniter V 2.0.0</a></li>
+    <li><a href="http://www.codeigniter.org.tw/downloads/file/CodeIgniter_1.7.3">CodeIgniter V 1.7.3</a></li>
+    <li><a href="http://www.codeigniter.org.tw/downloads/file/CodeIgniter_1.7.2">CodeIgniter V 1.7.2</a></li>
     <li><a href="http://codeigniter.com/download_files/CodeIgniter_1.7.1.zip">CodeIgniter V 1.7.1</a></li>
     <li><a href="http://codeigniter.com/download_files/CodeIgniter_1.7.0.zip">CodeIgniter V 1.7.0</a></li>
     <li><a href="http://codeigniter.com/download_files/CodeIgniter_1.6.3.zip">CodeIgniter V 1.6.3</a></li>
