--- a/installation/upgrade_203.html
+++ b/installation/upgrade_203.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>從 2.0.1 升級到 2.0.2 : CodeIgniter 使用手冊</title>
+<title>從 2.0.2 升級到 2.0.3 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -28,7 +28,7 @@
 <div id="masthead">
 <table cellpadding="0" cellspacing="0" border="0" style="width:100%">
 <tr>
-<td><h1>CodeIgniter User Guide Version 2.0.2</h1></td>
+<td><h1>CodeIgniter User Guide Version 2.0.3</h1></td>
 <td id="breadcrumb_right"><a href="../toc.html">Table of Contents Page</a></td>
 </tr>
 </table>
@@ -42,9 +42,9 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.org.tw/">CodeIgniter Home</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">User Guide Home</a> &nbsp;&#8250;&nbsp;
-Upgrading from 2.0.1 to 2.0.2
+Upgrading from 2.0.2 to 2.0.3
 </td>
-<td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.org.tw/user_guide/" />Search User Guide&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
+<td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="codeigniter.com/user_guide/" />Search User Guide&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
 </table>
 <!-- END BREADCRUMB -->
@@ -55,7 +55,7 @@ Upgrading from 2.0.1 to 2.0.2
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>Upgrading from 2.0.1 to 2.0.2</h1>
+<h1>Upgrading from 2.0.2 to 2.0.3</h1>
 
 <p>Before performing an update you should take your site offline by replacing the index.php file with a static one.</p>
 
@@ -66,15 +66,45 @@ Upgrading from 2.0.1 to 2.0.2
 
 <p class="important"><strong>Note:</strong> If you have any custom developed files in these folders please make copies of them first.</p>
 
+<h2>Step 2: Update CodeIgniter files</h2>
 
-<h2>Step 2: Remove loading calls for the Security Library</h2>
+<p>Replace the files and directories in your "system" folder with the new versions:</p>
+	
+<h2>Step 3: Update your main index.php file</h2>
 
-<p>Security has been moved to the core and is now always loaded automatically. Make sure you remove any loading calls as they will result in PHP errors.</p>
+<p>If you are running a stock <dfn>index.php</dfn> file simply replace your version with the new one.</p>
 
+<p>If your <dfn>index.php</dfn> file has internal modifications, please add your modifications to the new file and use it.</p>
 
-<h2>Step 3: Move MY_Security</h2>
+<h2>Step 4: Replace config/user_agents.php</h2>
 
-<p>If you are overriding or extending the Security library, you will need to move it to <kbd>application/core</kbd>.</p>
+<p>This config file has been updated to contain more user agent types, please copy it to <kbd>application/config/user_agents.php</kbd>.</p>
+
+<h2>Step 5: Change references of the EXT constant to ".php"</h2>
+<p class="important"><strong>Note:</strong> The EXT Constant has been marked as deprecated, but has not been removed from the application.  You are encouraged to make the changes sooner rather than later.</p>
+
+<h2>Step 6: Remove APPPATH.'third_party' from autoload.php</h2>
+
+<p>Open application/autoload.php, and look for the following:</p>
+
+<code>$autoload['packages'] = array(APPPATH.'third_party');</code>
+
+<p>If you have not chosen to load any additional packages, that line can be changed to:</p>
+<code>$autoload['packages'] = array();</code>
+
+<p>Which should provide for nominal performance gains if not autoloading packages.</p>
+
+<h2>Update Sessions Database Tables</h2>
+
+<p>If you are using database sessions with the CI Session Library, please update your <samp>ci_sessions</samp> database table as follows:</p>
+
+<code>
+	CREATE INDEX last_activity_idx ON ci_sessions(last_activity);
+	ALTER TABLE ci_sessions MODIFY user_agent VARCHAR(120);
+</code>	
+	
+	
+	
 
 </div>
 <!-- END CONTENT -->
