--- a/installation/upgrade_203.html
+++ b/installation/upgrade_203.html
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.org.tw/">CodeIgniter Home</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">User Guide Home</a> &nbsp;&#8250;&nbsp;
-Upgrading from 2.0.2 to 2.0.3
+從 2.0.2 升級到 2.0.3
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="codeigniter.com/user_guide/" />Search User Guide&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -69,7 +69,7 @@ Upgrading from 2.0.2 to 2.0.3
 <h2>Step 2: Update CodeIgniter files</h2>
 
 <p>Replace the files and directories in your "system" folder with the new versions:</p>
-	
+
 <h2>Step 3: Update your main index.php file</h2>
 
 <p>If you are running a stock <dfn>index.php</dfn> file simply replace your version with the new one.</p>
@@ -85,7 +85,7 @@ Upgrading from 2.0.2 to 2.0.3
 
 <h2>Step 6: Remove APPPATH.'third_party' from autoload.php</h2>
 
-<p>Open application/autoload.php, and look for the following:</p>
+<p>Open application/config/autoload.php, and look for the following:</p>
 
 <code>$autoload['packages'] = array(APPPATH.'third_party');</code>
 
@@ -99,12 +99,12 @@ Upgrading from 2.0.2 to 2.0.3
 <p>If you are using database sessions with the CI Session Library, please update your <samp>ci_sessions</samp> database table as follows:</p>
 
 <code>
-	CREATE INDEX last_activity_idx ON ci_sessions(last_activity);
-	ALTER TABLE ci_sessions MODIFY user_agent VARCHAR(120);
-</code>	
-	
-	
-	
+    CREATE INDEX last_activity_idx ON ci_sessions(last_activity);
+    ALTER TABLE ci_sessions MODIFY user_agent VARCHAR(120);
+</code> 
+
+
+
 
 </div>
 <!-- END CONTENT -->
