--- a/libraries/user_agent.html
+++ b/libraries/user_agent.html
@@ -58,25 +58,22 @@ User Agent 類別
 
 <h1>User Agent 類別</h1>
 
-<p>The User Agent 類別 provides functions that help identify information about the browser，mobile device，or robot visiting your site.
-In addition you can get referrer information as well as language and supported character-set information.</p>
+<p>提供函數來幫助你辨別瀏覽器資訊，例如:行動裝置或是機器人(Robot)，此外你可以取得語系與編碼資訊</p>
 
-<h2>Initializing the 類別</h2>
+<h2>初始化類別</h2>
 
-<p>Like most other classes in CodeIgniter，the User Agent class is initialized in your controller using the <dfn>$this->load->library</dfn> function:</p>
+<p>就像大多數在 CI 中的類別一樣，在控制器中初始化 User Agent 類別使用 <dfn>$this->load->library</dfn> 函數:</p>
 
 <code>$this->load->library('user_agent');</code>
-<p>Once loaded，the object will be available using: <dfn>$this->agent</dfn></p>
+<p>載入後可以這樣使用: <dfn>$this->agent</dfn></p>
 
-<h2>User Agent Definitions</h2>
+<h2>User Agent 定義</h2>
 
-<p>The user agent name definitions are located in a config file located at: <dfn>application/config/user_agents.php</dfn>.  You may add items to the
-various user agent arrays if needed.</p>
+<p>User Agent 的定義檔放置在 <dfn>application/config/user_agents.php</dfn>，如有必要你可以額外增加項目</p>
 
-<h2>Example</h2>
+<h2>範例</h2>
 
-<p>When the User Agent class is initialized it will attempt to determine whether the user agent browsing your site is
-a web browser，a mobile device，or a robot.  It will also gather the platform information if it is available.</p>
+<p>當 User Agent 初始化後，它將開始判斷是瀏覽器、行動裝置或機器人來造訪你的網頁，如果可以它也會取得平台資訊</p>
 
 
 <code>
@@ -105,11 +102,11 @@ echo $this->agent->platform(); // Platform info (Windows，Linux，Mac，etc.)
 </code>
 
 
-<h1>Function Reference</h1>
+<h1>函數參考</h1>
 
 
 <h2>$this->agent->is_browser()</h2>
-<p>Returns TRUE/FALSE (boolean) if the user agent is a known web browser.</p>
+<p>判別是否為已知的瀏覽器，回傳 TRUE 或 FALSE</p>
 
 <code> if ($this->agent->is_browser('Safari'))<br />
 {<br />
@@ -120,11 +117,10 @@ else if ($this->agent->is_browser())<br />
 &nbsp;&nbsp;&nbsp;&nbsp;echo 'You are using a browser.';<br />
 }</code>
 
-<p class="important"><strong>Note:</strong>&nbsp; The string "Safari" in this example is an array key in the list of browser definitions.
-You can find this list in <dfn>application/config/user_agents.php</dfn> if you want to add new browsers or change the stings.</p>
+<p class="important"><strong>Note:</strong>&nbsp;在這個範例中 "Safari" 這個字是你的瀏覽器清單中的一個陣列的索引值，你可以在 <dfn>application/config/user_agents.php</dfn> 找到瀏覽器清單</p>
 
 <h2>$this->agent->is_mobile()</h2>
-<p>Returns TRUE/FALSE (boolean) if the user agent is a known mobile device.</p>
+<p>判別是否為已知的行動裝置，回傳 TRUE 或 FALSE</p>
 
 <code> if ($this->agent->is_mobile('iphone'))<br />
 {<br />
@@ -140,34 +136,31 @@ else<br />
 }</code>
 
 <h2>$this->agent->is_robot()</h2>
-<p>Returns TRUE/FALSE (boolean) if the user agent is a known robot.</p>
+<p>判別是否為已知的機器人，回傳 TRUE 或 FALSE</p>
 
-<p class="important"><strong>注意:</strong>&nbsp; The user agent library only contains the most common robot
-definitions.  It is not a complete list of bots. There are hundreds of them so searching for each one would not be
-very efficient. If you find that some bots that commonly visit your site are missing from the list you can add them to your
-<dfn>application/config/user_agents.php</dfn> file.</p>
+<p class="important"><strong>注意:</strong>&nbsp; 機器人清單中只包含了幾種最常見的機器人，你可以在 <dfn>application/config/user_agents.php</dfn> 新增新的機器人</p>
 
 <h2>$this->agent->is_referral()</h2>
-<p>Returns TRUE/FALSE (boolean) if the user agent was referred from another site.</p>
+<p>判斷使用者是否從其它網站過來，回傳 TRUE 或 FALSE</p>
 
 
 <h2>$this->agent->browser()</h2>
-<p>Returns a string containing the name of the web browser viewing your site.</p>
+<p>回傳正在造訪你的網站的瀏覽器名稱</p>
 
 <h2>$this->agent->version()</h2>
-<p>Returns a string containing the version number of the web browser viewing your site.</p>
+<p>回傳正在造訪你的網站的瀏覽器版本</p>
 
 <h2>$this->agent->mobile()</h2>
-<p>Returns a string containing the name of the mobile device viewing your site.</p>
+<p>回傳正在造訪你的網站的行動裝置名稱</p>
 
 <h2>$this->agent->robot()</h2>
-<p>Returns a string containing the name of the robot viewing your site.</p>
+<p>回傳正在造訪你的網站的機器人名稱</p>
 
 <h2>$this->agent->platform()</h2>
-<p>Returns a string containing the platform viewing your site (Linux，Windows，OS X，etc.).</p>
+<p>回傳正在造訪你的網站的平台名稱 (例如: Linux，Windows，OS X)</p>
 
 <h2>$this->agent->referrer()</h2>
-<p>The referrer，if the user agent was referred from another site. Typically you'll test for this as follows:</p>
+<p>假如使用者是從其它網站造訪，你可以取得 referrer 資訊:</p>
 
 <code> if ($this->agent->is_referral())<br />
 {<br />
@@ -176,34 +169,32 @@ very efficient. If you find that some bots that commonly visit your site are mis
 
 
 <h2>$this->agent->agent_string()</h2>
-<p>Returns a string containing the full user agent string.  Typically it will be something like this:</p>
+<p>取得完整的使用者代理(user agent)資訊，例如:</p>
 
 <code>Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.0.4) Gecko/20060613 Camino/1.0.2</code>
 
 
 <h2>$this->agent->accept_lang()</h2>
-<p>Lets you determine if the user agent accepts a particular language. 參考範例:</p>
+<p>如果使用者代理(user agent)接受特定語系，則你可以決定:</p>
 
 <code>if ($this->agent->accept_lang('en'))<br />
 {<br />
 &nbsp;&nbsp;&nbsp;&nbsp;echo 'You accept English!';<br />
 }</code>
 
-<p class="important"><strong>注意:</strong> This function is not typically very reliable
-since some browsers do not provide language info，and even among those that do，it is not always accurate. </p>
+<p class="important"><strong>注意:</strong> 這個函數並不是那麼精確的，因為瀏覽器並不見得會提供有關語系的資訊</p>
 
 
 
 <h2>$this->agent->accept_charset()</h2>
-<p>Lets you determine if the user agent accepts a particular character set. 參考範例:</p>
+<p>如果使用者代理(user agent)接受特定編碼，則你可以決定:</p>
 
 <code>if ($this->agent->accept_charset('utf-8'))<br />
 {<br />
 &nbsp;&nbsp;&nbsp;&nbsp;echo 'You browser supports UTF-8!';<br />
 }</code>
 
-<p class="important"><strong>注意:</strong> This function is not typically very reliable
-since some browsers do not provide character-set info，and even among those that do，it is not always accurate. </p>
+<p class="important"><strong>注意:</strong> 這個函數並不是那麼精確的，因為瀏覽器並不見得會提供有關編碼的資訊</p>
 
 
 
