--- a/installation/upgrade_203.html
+++ b/installation/upgrade_203.html
@@ -28,8 +28,8 @@
 <div id="masthead">
 <table cellpadding="0" cellspacing="0" border="0" style="width:100%">
 <tr>
-<td><h1>CodeIgniter User Guide Version 2.0.3</h1></td>
-<td id="breadcrumb_right"><a href="../toc.html">Table of Contents Page</a></td>
+<td><h1>CodeIgniter 使用手冊版本 2.0.3</h1></td>
+<td id="breadcrumb_right"><a href="../toc.html">目錄</a></td>
 </tr>
 </table>
 </div>
@@ -40,11 +40,11 @@
 <table cellpadding="0" cellspacing="0" border="0" style="width:100%">
 <tr>
 <td id="breadcrumb">
-<a href="http://www.codeigniter.org.tw/">CodeIgniter Home</a> &nbsp;&#8250;&nbsp;
-<a href="../index.html">User Guide Home</a> &nbsp;&#8250;&nbsp;
+<a href="http://www.codeigniter.org.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
+<a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
 從 2.0.2 升級到 2.0.3
 </td>
-<td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="codeigniter.com/user_guide/" />Search User Guide&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
+<td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="codeigniter.org.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
 </table>
 <!-- END BREADCRUMB -->
@@ -55,48 +55,44 @@
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>Upgrading from 2.0.2 to 2.0.3</h1>
+<h1>從 2.0.2 升級到 2.0.3</h1>
 
-<p>Before performing an update you should take your site offline by replacing the index.php file with a static one.</p>
+<p>在執行升級之前，你可以透過更換 index.php 為靜態檔案，使得網站狀態為 offline。</p>
 
 
-<h2>Step 1: Update your CodeIgniter files</h2>
+<h2>步驟 1: 更新您的 CodeIgniter 檔案</h2>
 
-<p>Replace all files and directories in your "system" folder and replace your index.php file. If any modifications were made to your index.php they will need to be made fresh in this new one.</p>
+<p>更新 system 目錄底下的全部檔案及資料夾，取代根目錄 index.php 檔案。如果您有更動到 index.php，請麻煩用最新的取代它。</p>
 
-<p class="important"><strong>Note:</strong> If you have any custom developed files in these folders please make copies of them first.</p>
+<p class="important"><strong>注意:</strong> 假如您有個人開發的檔案在這目錄底下，麻煩請先複製備份。</p>
 
-<h2>Step 2: Update CodeIgniter files</h2>
+<h2>步驟 2: 更新您的主要 index.php 檔案</h2>
 
-<p>Replace the files and directories in your "system" folder with the new versions:</p>
+<p>假如網站是用原先的 <dfn>index.php</dfn> 檔案，這非常簡單，就直接取代成最新檔案即可。</p>
 
-<h2>Step 3: Update your main index.php file</h2>
+<p>假如您的 <dfn>index.php</dfn> 檔案有被修改過，請將修改過得內容套用到新檔案。</p>
 
-<p>If you are running a stock <dfn>index.php</dfn> file simply replace your version with the new one.</p>
+<h2>步驟 3: 取代 config/user_agents.php</h2>
 
-<p>If your <dfn>index.php</dfn> file has internal modifications, please add your modifications to the new file and use it.</p>
+<p>config 檔案已經更新相當多的 agent types，請複製檔案到 <kbd>application/config/user_agents.php</kbd>。</p>
 
-<h2>Step 4: Replace config/user_agents.php</h2>
+<h2>步驟 4: 轉換 EXT constant 變數為 ".php"</h2>
+<p class="important"><strong>注意:</strong> EXT Constant 已經被標記為不讚成使用，但是系統尚未完全移除，我們鼓勵您儘快將 EXT 取代成 ".php"。</p>
 
-<p>This config file has been updated to contain more user agent types, please copy it to <kbd>application/config/user_agents.php</kbd>.</p>
+<h2>步驟 5: 從 autoload.php 檔案移除 APPPATH.'third_party'</h2>
 
-<h2>Step 5: Change references of the EXT constant to ".php"</h2>
-<p class="important"><strong>Note:</strong> The EXT Constant has been marked as deprecated, but has not been removed from the application.  You are encouraged to make the changes sooner rather than later.</p>
-
-<h2>Step 6: Remove APPPATH.'third_party' from autoload.php</h2>
-
-<p>Open application/config/autoload.php, and look for the following:</p>
+<p>編輯 application/config/autoload.php, 找尋下面程式碼:</p>
 
 <code>$autoload['packages'] = array(APPPATH.'third_party');</code>
 
-<p>If you have not chosen to load any additional packages, that line can be changed to:</p>
+<p>假如您不需要額外載入 packages，請改成底下程式碼:</p>
 <code>$autoload['packages'] = array();</code>
 
-<p>Which should provide for nominal performance gains if not autoloading packages.</p>
+<p>假如沒有自動載入 packages，系統會提供效能。</p>
 
-<h2>Update Sessions Database Tables</h2>
+<h2>更新 Sessions 資料庫表格</h2>
 
-<p>If you are using database sessions with the CI Session Library, please update your <samp>ci_sessions</samp> database table as follows:</p>
+<p>假如您有使用資料庫 CI Session Library，請透過底下程式碼更新 <samp>ci_sessions</samp> 表格結構:</p>
 
 <code>
     CREATE INDEX last_activity_idx ON ci_sessions(last_activity);
@@ -112,11 +108,11 @@
 
 <div id="footer">
 <p>
-Previous Topic:&nbsp;&nbsp;<a href="index.html">Installation Instructions</a>
+上個主題:&nbsp;&nbsp;<a href="index.html">安裝指引</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-<a href="#top">Top of Page</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-<a href="../index.html">User Guide Home</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-Next Topic:&nbsp;&nbsp;<a href="troubleshooting.html">Troubleshooting</a>
+<a href="#top">回到頂端</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
+<a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
+下個主題:&nbsp;&nbsp;<a href="troubleshooting.html">程式除錯</a>
 </p>
 <p><a href="http://www.codeigniter.org.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006 - 2011 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">EllisLab, Inc.</a></p>
 </div>
